# proof-of-anchor

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  NETLIFY_DEPLOYMENT.md  NETLIFY_FIX.md  NETLIFY_SETUP_QUICK_GUIDE.md  PITCH_DECK.md  README.md  REAL_DATA_SETUP.md
verifier/: Cargo.toml
verifier/proof_samples/: README.md
verifier/src/: main.rs  real_zk_tls.rs
verifier/verifier/project_metadata/: project_1759666204.json  project_1759666296.json  project_1759666388.json  project_1759666515.json  project_1759670251.json  project_1759672130.json  project_1759695331.json  project_1759695358.json  project_1759695400.json
verifier/verifier/proof_samples/: compact_0cd16b2714e2b583a491a2748e0e48e4.json  compact_1e81bd8a4b4219c9adcec04bb60c7320.json  compact_2c489d63910688a4b64f42ce99e26831.json  compact_2ef4f165f51b7e10b421443cf86df5d1.json  compact_2feeafb6c85d0f333e67b4a6ab2572ea.json  compact_3c28edd8f491a2afcd576b0b8dc90cb4.json  compact_40378b81841325261afab6e483c329ed.json  compact_45b23edec1f08011ef2a3f175a6086e0.json  compact_60fce52c9efe2c3922615387bbe6ffae.json  compact_6531f6418627973e0d95cf38e7c4b993.json  compact_65b3a1c7fd756507bc7c61e76cc284ab.json  compact_6a7b4423ef4e76c5fdad936bd12b8fe4.json  compact_6bf5e8c9662358784236e4d18e8bef7e.json  compact_6d8b870dd6ed0df7526b3e18bfffd25d.json  compact_7c0ff0237b0632b15aba228e52ca7f42.json  compact_827785511fdd236c33d3daaa529390dd.json  compact_84a10b6e3470ef6a5f62101406377003.json  compact_a6cd0bcf9ee1997347a8e6b0ca392731.json  compact_aa2144c57cdf8019829c9df3a3b1fd79.json  compact_ccb2a342096f23bad201bd5046e26527.json  compact_d62ce165aed13dbe0a14ef86bb6ba5bf.json  compact_d74d719f4636a079db8da3635ae91df1.json  compact_f120093de30137210f1ff2127a68ab07.json  compact_fd48238ac2c6d94b37e733885b9d0c59.json  metadata_1e81bd8a4b4219c9adcec04bb60c7320.json  metadata_ccb2a342096f23bad201bd5046e26527.json  metadata_d62ce165aed13dbe0a14ef86bb6ba5bf.json  proof_0cd16b2714e2b583a491a2748e0e48e4.json  proof_1758920167.json  proof_1758968661.json  proof_1758968723.json  proof_1758968724.json  proof_1758968725.json  proof_1e81bd8a4b4219c9adcec04bb60c7320.json  proof_2c489d63910688a4b64f42ce99e26831.json  (+21 more)
(+91 files in other folders)
