[workspace]
members = [
    "solana/programs/attestation",
    "verifier",
]
resolver = "2"

# Note: Future incompatibility warnings from Solana dependencies are informational only
# and don't affect current functionality. These will be resolved when Solana dependencies
# are updated in the future.

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.26"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
